-fixed WAVE contrast errors in checkout page buttons

--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -153,7 +153,7 @@ nav a {
 
 .cart-circle p {
   margin: 0;
-  color: var(--bg-primary);
+  color: var(--bg-2);
   font-size: 0.9rem;
 }
 
